[package]
name = "pycrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pycrab"
crate-type = ["cdylib"]

[dependencies]
csv = "1.2.1"
indicatif = "0.17.0"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
mysql = "20.0.1"
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-native-tls"]}
tokio = { version="1", features=["full"]}
