[package]
name = "pycrab"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pycrab"
crate-type = ["cdylib"]

[dependencies]
csv = "1.2.1"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
